--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "https://github.com/Nagi226/hws2",
+  "homepage": "https://nagi226.github.io/hws2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
